docs/1.7/SubjectAccessReview.md
# SubjectAccessReview

* [write operations](#write)

## write

### apis.authorization.k8s.io.v1.subjectaccessreviews.post

create a SubjectAccessReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.apis.authorization.v1.SubjectAccessReview |

### apis.authorization.k8s.io.v1beta1.subjectaccessreviews.post

create a SubjectAccessReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.apis.authorization.v1beta1.SubjectAccessReview |

